syntax = "proto3";

                 package jobCard;
service JobCardService {
 rpc createJobCard (JobCardCreateInput) returns (JobCard) {}
rpc jobCards (findManyParams) returns (stream JobCard) {}
rpc jobCard (JobCardWhereUniqueInput) returns (JobCard) {}
rpc updateJobCard (JobCardUpdateInput) returns (JobCard) {}
rpc deleteJobCard (JobCardWhereUniqueInput) returns (JobCard) {} 
 }
message JobCardCreateInput {
string actualEndDate = 1;
string actualStartDate = 2;
string amendedFrom = 3;
string barcode = 4;
string batchNo = 5;
string bomNo = 6;
string company = 7;
string createdAt = 8;
string creation = 9;
int32 currentTime = 10;
int32 docstatus = 11;
string expectedEndDate = 12;
string expectedStartDate = 13;
string forJobCard = 14;
string forOperation = 15;
int32 forQuantity = 16;
int32 hourRate = 17;
string id = 18;
int32 idx = 19;
int32 isCorrectiveJobCard = 20;
string itemName = 21;
int32 jobStarted = 22;
string modified = 23;
string modifiedBy = 24;
string name = 25;
string namingSeries = 26;
string operation = 27;
string operationId = 28;
string operationRowNumber = 29;
string owner = 30;
string postingDate = 31;
int32 processLossQty = 32;
string productionItem = 33;
string project = 34;
string qualityInspection = 35;
string qualityInspectionTemplate = 36;
string remarks = 37;
int32 requestedQty = 38;
int32 sequenceId = 39;
string serialAndBatchBundle = 40;
string serialNo = 41;
string startedTime = 42;
string status = 43;
int32 timeRequired = 44;
int32 totalCompletedQty = 45;
int32 totalTimeInMins = 46;
int32 transferredQty = 47;
string updatedAt = 48;
string wipWarehouse = 49;
string workOrder = 50;
string workstation = 51;
string workstationType = 52;
};
message JobCard {
string actualEndDate = 1;
string actualStartDate = 2;
string amendedFrom = 3;
string barcode = 4;
string batchNo = 5;
string bomNo = 6;
string company = 7;
string createdAt = 8;
string creation = 9;
int32 currentTime = 10;
int32 docstatus = 11;
string expectedEndDate = 12;
string expectedStartDate = 13;
string forJobCard = 14;
string forOperation = 15;
int32 forQuantity = 16;
int32 hourRate = 17;
string id = 18;
int32 idx = 19;
int32 isCorrectiveJobCard = 20;
string itemName = 21;
int32 jobStarted = 22;
string modified = 23;
string modifiedBy = 24;
string name = 25;
string namingSeries = 26;
string operation = 27;
string operationId = 28;
string operationRowNumber = 29;
string owner = 30;
string postingDate = 31;
int32 processLossQty = 32;
string productionItem = 33;
string project = 34;
string qualityInspection = 35;
string qualityInspectionTemplate = 36;
string remarks = 37;
int32 requestedQty = 38;
int32 sequenceId = 39;
string serialAndBatchBundle = 40;
string serialNo = 41;
string startedTime = 42;
string status = 43;
int32 timeRequired = 44;
int32 totalCompletedQty = 45;
int32 totalTimeInMins = 46;
int32 transferredQty = 47;
string updatedAt = 48;
string wipWarehouse = 49;
string workOrder = 50;
string workstation = 51;
string workstationType = 52;
};
message JobCardWhereUniqueInput {
string actualEndDate = 1;
string actualStartDate = 2;
string amendedFrom = 3;
string barcode = 4;
string batchNo = 5;
string bomNo = 6;
string company = 7;
string createdAt = 8;
string creation = 9;
int32 currentTime = 10;
int32 docstatus = 11;
string expectedEndDate = 12;
string expectedStartDate = 13;
string forJobCard = 14;
string forOperation = 15;
int32 forQuantity = 16;
int32 hourRate = 17;
string id = 18;
int32 idx = 19;
int32 isCorrectiveJobCard = 20;
string itemName = 21;
int32 jobStarted = 22;
string modified = 23;
string modifiedBy = 24;
string name = 25;
string namingSeries = 26;
string operation = 27;
string operationId = 28;
string operationRowNumber = 29;
string owner = 30;
string postingDate = 31;
int32 processLossQty = 32;
string productionItem = 33;
string project = 34;
string qualityInspection = 35;
string qualityInspectionTemplate = 36;
string remarks = 37;
int32 requestedQty = 38;
int32 sequenceId = 39;
string serialAndBatchBundle = 40;
string serialNo = 41;
string startedTime = 42;
string status = 43;
int32 timeRequired = 44;
int32 totalCompletedQty = 45;
int32 totalTimeInMins = 46;
int32 transferredQty = 47;
string updatedAt = 48;
string wipWarehouse = 49;
string workOrder = 50;
string workstation = 51;
string workstationType = 52;
};
message JobCardUpdateInput {
string actualEndDate = 1;
string actualStartDate = 2;
string amendedFrom = 3;
string barcode = 4;
string batchNo = 5;
string bomNo = 6;
string company = 7;
string createdAt = 8;
string creation = 9;
int32 currentTime = 10;
int32 docstatus = 11;
string expectedEndDate = 12;
string expectedStartDate = 13;
string forJobCard = 14;
string forOperation = 15;
int32 forQuantity = 16;
int32 hourRate = 17;
string id = 18;
int32 idx = 19;
int32 isCorrectiveJobCard = 20;
string itemName = 21;
int32 jobStarted = 22;
string modified = 23;
string modifiedBy = 24;
string name = 25;
string namingSeries = 26;
string operation = 27;
string operationId = 28;
string operationRowNumber = 29;
string owner = 30;
string postingDate = 31;
int32 processLossQty = 32;
string productionItem = 33;
string project = 34;
string qualityInspection = 35;
string qualityInspectionTemplate = 36;
string remarks = 37;
int32 requestedQty = 38;
int32 sequenceId = 39;
string serialAndBatchBundle = 40;
string serialNo = 41;
string startedTime = 42;
string status = 43;
int32 timeRequired = 44;
int32 totalCompletedQty = 45;
int32 totalTimeInMins = 46;
int32 transferredQty = 47;
string updatedAt = 48;
string wipWarehouse = 49;
string workOrder = 50;
string workstation = 51;
string workstationType = 52;
};
message findManyParams {

};